--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a koa project",
   "main": "app.js",
   "scripts": {
-    "start": "node --harmony app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
