--- a/package.json
+++ b/package.json
@@ -1,10 +1,23 @@
 {
-  "name": "koa-project",
+  "name": "koa_sql",
   "version": "1.0.0",
-  "description": "a koa project",
+  "description": "使用Koa,mysql,搭建的后台服务器",
   "main": "app.js",
+  "dependencies": {
+    "koa": "^2.5.2",
+    "koa2-cors": "^2.0.6",
+    "mysql": "^2.16.0"
+  },
+  "devDependencies": {
+    "koa-bodyparser": "^4.2.1",
+    "koa-helmet": "^4.0.0",
+    "koa-logger": "^3.2.0",
+    "koa-respond": "^1.0.1",
+    "koa-router": "^7.4.0",
+    "opn": "^5.3.0"
+  },
   "scripts": {
-    "start": "node app.js",
+    "start": "node --harmony app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -12,15 +25,13 @@
     "url": "git+https://github.com/runningPolarBear/koa-project.git"
   },
   "keywords": [
-    "koa"
+    "koa",
+    "mysql"
   ],
-  "author": "AlexHu",
+  "author": "Fizz",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/runningPolarBear/koa-project/issues"
   },
-  "homepage": "https://github.com/runningPolarBear/koa-project#readme",
-  "dependencies": {
-    "koa": "^2.5.2"
-  }
+  "homepage": "https://github.com/runningPolarBear/koa-project#readme"
 }
