--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "koa_sql",
+  "name": "koa-project",
   "version": "1.0.0",
-  "description": "使用Koa,mysql,搭建的后台服务器",
+  "description": "a koa project",
   "main": "app.js",
   "dependencies": {
     "koa": "^2.5.2",
@@ -28,7 +28,7 @@
     "koa",
     "mysql"
   ],
-  "author": "Fizz",
+  "author": "AlexHu",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/runningPolarBear/koa-project/issues"
